<resources>
    <string name="app_name">KBway</string>
    <string name="title_activity_maps">KBway</string>
    <string name="settings">Параметры</string>
    <string name="dark_them">Тёмная тема</string>
    <string name="light_them">Светлая тема</string>
    <string name="division_line">Division line</string>
    <string name="technical_support">Техническая поддержка</string>
    <string name="play_store_review">Оставить отзыв в Play Store</string>
    <string name="driver_info">Информация о водителе</string>
    <string name="vehicle">Авто:</string>
    <string name="mercedes_benz">Mercedes-Benz</string>
    <string name="vehicle_number">Гос. номер:</string>
    <string name="number_itself">AB 344 GPF</string>
    <string name="llc">ОсОО “АвтоСтар”</string>
    <string name="full_name">ФИО</string>
    <string name="ivan_ivanovich">Иванов Иван Иванович</string>
    <string name="cell_number">Номер телефона</string>
    <string name="_996_551_123_456">+996 551 123 456</string>
    <string name="company">Компания</string>
    <string name="back_to_map">Вернуться к карте</string>
    <string name="welcome_description">В этом приложении вы сможете видеть, где в реальном времени проезжает нужная вам маршрутка.</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="start">Начать</string>
    <string name="route">Выбранный маршрут: 9</string>
    <string name="another_route">Выбрать другой маршрут</string>
    <string name="go_back">go back</string>
    <string name="menu">menu</string>
    <string name="background_image">Background image</string>
    <string name="choose_route">Выберите маршрут</string>
    <string name="driver_start_screen_info">В этом приложении вы сможете видеть, где вы и ваши коллеги находитесь в реальном времени.</string>
    <string name="ab_344_gpf">AB 344 GPF </string>
    <string name="driver_title">Ваши коллеги сейчас на маршруте </string>
    <string name="driver_name">Иванов Иван Иванович </string>
    <string name="btn_back_to_map">Вернуться к карте </string>
    <string name="btn_start">НАЧАТЬ ></string>
    <string name="welcome_text">Добро пожаловать! </string>
    <string name="api_key">AIzaSyCabJkI1Cs3L3ovPp_BLfFyCEBF6bdrClw</string>
    <string name="login_main">Введите свои данные </string>
    <string name="login_fio">ФИО </string>
    <string name="login_phone">Номер телефона </string>
    <string name="phone">+996 551 123 456</string>
    <string name="route_info">Ваш маршрут: 2</string>
    <string name="colleagues_list_btn">Ваши коллеги</string>
    <string name="login_password">Пароль </string>
    <string name="welcome_text_info">В этом приложении вы сможете видеть, где в реальном времени проезжает нужная вам маршрутка. </string>
    <string name="gps_button">gps Button</string>
    <string name="white_panel">White panel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kbway_app_icon">KbWay app icon</string>
    <string name="background_gradient">Background gradient</string>
</resources>