<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userMap.UserMapFragment">

    <fragment
        android:id="@+id/userMapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        map:uiCompass="false"
        map:uiRotateGestures="true"
        map:uiTiltGestures="true"
        map:uiZoomControls="false"
        map:uiZoomGestures="true"
        tools:context=".root.RootActivity" />

    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/goBackCardView"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="64dp">

                <ImageView
                    android:id="@+id/goBackImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/go_back"
                    android:scaleX="2"
                    android:scaleY="2"
                    android:src="@drawable/ic_back_arrow_dark" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/routCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="16dp">

                <TextView
                    android:id="@+id/routTextView"
                    android:layout_width="200dp"
                    android:layout_height="44dp"
                    android:gravity="center"
                    android:text="@string/route"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/menuCardView"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="64dp">

                <ImageView
                    android:id="@+id/menuImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/menu"
                    android:scaleX="2"
                    android:scaleY="2"
                    android:src="@drawable/ic_menu" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/bottomWhitePanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/white_panel"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_user_bottom_pannel"
        app:cardCornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/buttonCardView"
        android:layout_width="280dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/light_black"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/bottomWhitePanel"
        app:layout_constraintEnd_toStartOf="@+id/gpsCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottomWhitePanel">

        <TextView
            android:id="@+id/bottomButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:text="@string/another_route"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/gpsCardView"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/black"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottomWhitePanel">

        <ImageButton
            android:id="@+id/gpsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/gps_button"
            android:scaleX="1.6"
            android:scaleY="1.6"
            android:src="@drawable/ic_gps_disabled"
            android:text="@string/another_route"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>